Визуа лизация и исправления (временно)

--- a/css/console.css
+++ b/css/console.css
@@ -116,14 +116,17 @@
 .number{
     color: #4040AA
 }
-.bool{
+.boolean{
     color: #00b823;
 }
 .string{
     color: #b25b07;
 }
-.funct{
+.function{
     color:#5858ff;
+}
+.object{
+    
 }
 .funct__key{
     color:#fd9800;
