--- a/css/console.css
+++ b/css/console.css
@@ -1,133 +1,159 @@
-.console{
-    margin: 1rem;
-    background: #F0F0F0;
-    padding: .5rem;
-    border: 1px solid;
-    font-size: 1.25rem;
+:root{
+    --console-height:600px;
+    --console-font-size:1rem;
+    --console-background:#D0D0D0;
+    --console-object-bracket-color: #fa2929;
+    --console-array-bracket-color: #9800bb;
+    --console-ray-color:#ff4e0027;
+    --console-key-color:#0000cc;
+    --console-number-color:#4040AA;
+    --console-boolean-color:#00b823;
+    --console-string-color:#b75722;
+    --console-function-color:#5858ff;
+    --console-function-key-color:#d27e00;
+    --console-border:1px solid;
+}
+.console
+{
+    margin: 1em;
+    background: var(--console-background);
+    padding: .5em;
+    border: var(--console-border);
+    font-size: var(--console-font-size);
     overflow: auto;
-    height: 400px;
+    height: var(--console-height);
     max-width: 100%;
 }
 .console::-webkit-scrollbar,
-.block__list::-webkit-scrollbar {
+.block__list::-webkit-scrollbar
+{
     -webkit-appearance: none;
     width: 4px;
     height: 4px;
 }
 .console::-webkit-scrollbar-track,
-.block__list::-webkit-scrollbar-track{
+.block__list::-webkit-scrollbar-track
+{
     background-color: rgba(0,0,0,.08);
 }
 .console::-webkit-scrollbar-thumb,
-.block__list::-webkit-scrollbar-thumb{
+.block__list::-webkit-scrollbar-thumb
+{
     border-radius: 4px;
     background: linear-gradient(180deg, #0077bc 0%, #4392A9 100%);
     -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
-.console__block{
-    padding: 0 1rem 1rem;
+.console__block
+{
+    padding: 0 1em .25em 0;
     width: max-content;
 }
-.console__block::before,.console__block::after{
-    color: #fa2929;
-}
-.console__block::before{
-    display: block;
-    content: "{";
+.console__block-open,
+.console__block-close,
+.console__block-open,
+.console__block-close
+{
     font-weight: 600;
-    margin-left: -1rem;
 }
-.console__block::after{
-    display: block;
-    content: "}";
-    font-weight: 600;
-    margin-left: -1rem;
+.object>.console__block-open,
+.object>.console__block-close
+{
+    color: var(--console-object-bracket-color);
 }
-.text::before,.text::after{
+.array>.console__block-open,
+.array>.console__block-close
+{
+    color: var(--console-array-bracket-color);
+}
+.block__is-sub>.console__line,
+.array>.console__line,
+.object>.console__line
+{
+    padding-left: 1em;
+}
+.object .string::before,
+.array .string::before,
+.object .string>pre::after,
+.array .string>pre::after
+{
+    display: inline-block;
+    content: '"';
+}
+.text::before,.text::after
+{
     display: none;
 }
-.array::before{
-    content: "[";
-}
-.array::after{
-    content: "]";
-}
-.console__line{
+.console__line
+{
     display: block;
     position: relative;
 }
-.console__line::after{
+.console__line::after
+{
     display: table;
     content: "";
     clear: both;
 }
-.console__line>.console__block{
+.console__line>.console__block
+{
     padding-top: 0;
 }
 .console__line>.console__block,
 .console__key,
-.console__value{
+.console__value
+{
     float: left;
 }
-.console__value>pre{
+.console__value>pre
+{
     margin: 0;
     padding: 0;
     display: inline-block;
 }
-.console__line>.console__block::after,
-.console__line>.console__block::before{
-    color: #fa2929;
-}
-.console__line>.array::after,
-.console__line>.array::before{
-    color:#5ac651;
-}
-.comma>.console__value::after{
+.comma>.console__value::after,
+.comma>.console__block>.console__block-close::after
+{
     content: ",";
-    color: #0000cc;
+    color: var(--console-key-color);
 }
-.comma>.console__block::after{
-    content: "},";
-}
-.comma>.array::after{
-    content: "],";
-}
-.console__key{
-    color:#0000cc;
+.console__key
+{
+    color: var(--console-key-color);
     font-weight: 600;
 }
-.console__line>.console__block>.console__line .console__key::before{
+.console__line>.console__block>.console__line::before
+{
     display: block;
     position: absolute;
-    left:-.75rem;
+    left:.125em;
     height: 100%;
-    width: 1px;
-    background: #ff4e0017;
+    width: 2px;
+    background: var(--console-ray-color);
     content: "";
 }
-.console__line>.console__block>.console__value{
-    color: #084d02;
-}
-.console__key::after{
+.console__key::after
+{
     content: ":";
-    padding: 0 .5rem 0 .125rem;
+    padding: 0 .5em 0 .125em;
     font-weight: 600;
 }
-.number{
-    color: #4040AA
+.number
+{
+    color: var(--console-number-color);
 }
-.boolean{
-    color: #00b823;
+.boolean
+{
+    color: var(--console-boolean-color);
 }
-.string{
-    color: #b25b07;
+.string
+{
+    color: var(--console-string-color);
 }
-.function{
-    color:#5858ff;
+.function
+{
+    color: var(--console-function-color);
 }
-.object{
-    
-}
-.funct__key{
-    color:#fd9800;
+.funct__key
+{
+    color: var(--console-function-key-color);
 }
